--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-file-transfer",
+  "name": "mes-plugin-file-transfer",
   "version": "1.7.2-dev",
   "description": "Cordova File Transfer Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-file-transfer",
+    "id": "mes-plugin-file-transfer",
     "platforms": [
       "android",
       "amazon-fireos",
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-file-transfer"
+    "url": "https://github.com/bilalameer89/cordova-plugin-file-transfer.git"
   },
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/CB"
